# obs_audiosource_to_websocket

./: CMakeLists.txt  README.md  buildspec.json
cmake/common/: compiler_common.cmake
cmake/windows/: compilerconfig.cmake
src/: plugin-main.cpp
